--- a/SimpleApp/Base.lproj/Main.storyboard
+++ b/SimpleApp/Base.lproj/Main.storyboard
@@ -1337,12 +1337,42 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="6BJ-by-hY3" kind="relationship" relationship="rootViewController" id="FSq-MN-YGV"/>
+                        <segue destination="8df-Rl-lI9" kind="relationship" relationship="rootViewController" id="pzQ-R2-cuK"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Eja-9B-f0g" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1191" y="1041"/>
+        </scene>
+        <!--Chat-->
+        <scene sceneID="TPx-xi-6GH">
+            <objects>
+                <tableViewController id="8df-Rl-lI9" customClass="ChatConnectionsTableViewController" customModule="Wanna_Help" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="QBd-Hg-LSb">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="3ji-3h-Xhg">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="3ji-3h-Xhg" id="HoR-1N-pNA">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8df-Rl-lI9" id="Mcn-SN-djo"/>
+                            <outlet property="delegate" destination="8df-Rl-lI9" id="sou-4x-wg7"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Chat" id="Biv-To-dft"/>
+                    <connections>
+                        <segue destination="6BJ-by-hY3" kind="show" identifier="toChat" id="bjE-Cw-8Ud"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3SW-yF-KNT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1191" y="1729"/>
         </scene>
         <!--No Help View Controller-->
         <scene sceneID="O3H-Ec-d1i">
